[workspace]
resolver = "2"
members = [
  "contracts/subscription", 
  "contracts/achievement_collection",
  "contracts/achievement_nft",
  "contracts/fractional_nft",
  "contracts/nft_staking",
  "contracts/achievement_sets",
  "contracts/auction",
  "contracts/battle_pass",
  "contracts/bridge",
  "contracts/crafting",
  "contracts/daily_rewards",
  "contracts/energy",
  "contracts/guild",
  "contracts/leaderboard",
  "contracts/lending",
  "contracts/delegation",
  "contracts/immutable_leaderboard",
  "contracts/oracle",
  "contracts/puzzle_verification",
  "contracts/puzzle_insurance",
  "contracts/quest_chain",
  "contracts/referral",
  "contracts/reputation",
  "contracts/reward_token",
  "contracts/staking",
  "contracts/time_attack",
  "contracts/tournament",
  "contracts/bounty",
  "contracts/charity_donation",
  "contracts/community_grant",
  "contracts/vesting",
  "contracts/insurance",
  "contracts/whitelist",
  "contracts/anti_bot",
  "contracts/skill_rating",
  "contracts/governance",
  "contracts/lottery",
  "contracts/puzzle_lottery",
  "contracts/prize_pool",
  "contracts/seasonal_event",
  "contracts/puzzle_dao",
  "contracts/flash_loan",
  "contracts/hint_marketplace",
  "contracts/prediction_market",
  "contracts/yield_farming",
  "contracts/token_burn",
  "contracts/reward_vault",
  "contracts/multisig_treasury",
  "contracts/puzzle_rental",
  "contracts/puzzle_bounty",
  "contracts/dynamic_nft",
  "contracts/social_tipping",
  "contracts/social_wager",
  "contracts/nft_wrapper",
  "contracts/puzzle_crowdfund",
  "contracts/gamification_rewards",
  "contracts/proof_of_activity",
  "contracts/player_sponsorship",
  "contracts/emergency_pause",
  "contracts/tournament_prize_pool",
  "contracts/loyalty_points",
  "contracts/nft_upgrade",
  "contracts/nft_bundle",
  "contracts/flash_challenge",
  "contracts/liquidity_mining",
  "contracts/puzzle_voting", "contracts/nft_composability",
  "contracts/liquidity_mining",
  "contracts/puzzle_voting",
  "contracts/delegation",
  "contracts/identity",
  "contracts/token_swap",
  "contracts/puzzle_subscription_tier",
  "contracts/airdrop_merkle_claim",
  "contracts/nft_trait_marketplace",
]

[workspace.dependencies]
soroban-sdk = { version = "21.0.0" }

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
