[package]
name = "nft-staking"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
reward-token = { path = "../reward_token" }

[features]
testutils = ["soroban-sdk/testutils"]
